Add Content Publisher to AWS Staging Backend & Add Data Sync
This is part of the work to migrate the remaining publishing apps
to AWS.

Govuk_env_sync has also been set up for the content publisher database, the sanitisation
script has been copied from the pre-existing one here:
https://github.com/alphagov/env-sync-and-backup/blob/master/sanitising-sql/sanitise_content_publisher_production.sql

--- a/hieradata/node/postgresql-standby-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/postgresql-standby-1.backend.publishing.service.gov.uk.yaml
@@ -21,4 +21,14 @@ govuk_env_sync::tasks:
     temppath: "/var/lib/autopostgresqlbackup/service-manual-publisher_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
-
+  "push_content_publisher_production_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "45"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
