--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -329,3 +329,15 @@ govuk_env_sync::tasks:
     temppath: "/tmp/search_admin_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "pull_content_publisher_production_daily":
+     ensure: "present"
+     hour: "2"
+     minute: "45"
+     action: "pull"
+     dbms: "postgresql"
+     storagebackend: "s3"
+     database: "content_publisher_production"
+     temppath: "/tmp/content_publisher_production"
+     url: "govuk-staging-database-backups"
+     path: "postgresql-backend"
+     transformation_sql_filename: "content_publisher.sql"
