Run nightly govuk_env_sync backup for Signon in Carrenza Prod.
This is in preparation for migrating Signon to AWS.

--- a/hieradata/node/mysql-backup-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mysql-backup-1.backend.publishing.service.gov.uk.yaml
@@ -32,3 +32,14 @@ govuk_env_sync::tasks:
     temppath: "/home/govuk-backup/tmp_dumps/search_admin_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "push_signon_production_daily":
+    ensure: "present"
+    hour: "0"
+    minute: "20"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "signon_production"
+    temppath: "/home/govuk-backup/tmp_dumps/signon_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
