Remove release from the list of apps in Carrenza
As it's now running in AWS, but keep it in the other CI pipeline jobs
and Integration deploy apps lists.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -26,7 +26,6 @@ node_class: &node_class
       - manuals-publisher
       - maslow
       - publisher
-      - release
       - search-admin
       - service-manual-publisher
       - short-url-manager
@@ -435,6 +434,7 @@ govuk_ci::master::pipeline_jobs:
   manuals-frontend: {}
   mapit: {}
   publishing-api: {}
+  release: {}
   router: {}
   router-api: {}
   search-api: {}
@@ -642,6 +642,7 @@ govuk_jenkins::jobs::integration_deploy::applications:
   manuals-frontend: {}
   mapit: {}
   publishing-api: {}
+  release: {}
   router: {}
   router-api: {}
   search-api: {}
