--- a/hieradata/node/asset-master-1.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/asset-master-1.backend.publishing.service.gov.uk.yaml
@@ -1,2 +1,2 @@
-govuk::node::s_asset_base::process_uploaded_attachments_to_s3: true
-govuk::apps::asset_env_sync::enabled: true
+govuk::node::s_asset_base::process_uploaded_attachments_to_s3: false
+govuk::apps::asset_env_sync::enabled: false
