Prometheus to scrape router metrics in integration
We have instrumented the router application

We want prometheus to scrape it in integration, as this is where we will
deploy our instrumented build

The router's api (as opposed to the router-api) is listening on port
3055

Signed-off-by: Toby Lorne <toby.lornewelch-richards@digital.cabinet-office.gov.uk>
Co-authored-by: Chris <chris.banks@digital.cabinet-office.gov.uk>
Co-authored-by: Sebastian <sebastian.schmieschek@digital.cabinet-office.gov.uk>

--- a/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
+++ b/modules/govuk_prometheus/files/etc/prometheus/prometheus.yml
@@ -49,3 +49,19 @@ scrape_configs:
         target_label: aws_migration
       - source_labels: [__meta_ec2_tag_aws_hostname]
         target_label: aws_hostname
+  - job_name: 'router'
+    ec2_sd_configs:
+      - region: "eu-west-1"
+        port: 3055
+        filters:
+        - name: instance-state-name
+          values: [ running ]
+        - name: tag:aws_migration
+          values: [ cache ]
+        - name: tag:aws_environment
+          values: [ integration ]
+    relabel_configs:
+      - source_labels: [__meta_ec2_tag_aws_migration]
+        target_label: aws_migration
+      - source_labels: [__meta_ec2_tag_aws_hostname]
+        target_label: aws_hostname
