Adding Integration pull_link_checker_api_production_daily
We need to keep link_checker_api database fresh by pulling in a sync
from the production database daily.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -352,3 +352,14 @@ govuk_env_sync::tasks:
     temppath: "/tmp/service-manual-publisher_production"
     url: "govuk-staging-database-backups"
     path: "postgresql-backend"
+  "pull_link_checker_api_production_daily":
+    ensure: "present"
+    hour: "2"
+    minute: "2"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "link_checker_api_production"
+    temppath: "/tmp/link_checker_api_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
