Disable integration data for Whitehall content
This disables parts of the prod/staging -> integration sync, so that
the environment remains unchagned while the budget is being prepared.

While the DB sync for Whitehall is now done via govuk_env_sync, the
associated assets are still handled via env-sync-and-backup, so it's
still necesssary to disable the copy_data_to_integration job.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -232,7 +232,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "pull_whitehall_staging_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "1"
     minute: "30"
     action: "pull"
@@ -274,7 +274,7 @@ govuk_env_sync::tasks:
     hour: "6"
     minute: "30"
   "pull_publishing_api_production_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "2"
     minute: "40"
     action: "pull"
@@ -286,7 +286,7 @@ govuk_env_sync::tasks:
     path: "postgresql-backend"
     transformation_sql_filename: "sanitise_publishing_api_production.sql"
   "pull_govuk_assets_production":
-    ensure: "present"
+    ensure: "absent"
     hour: "3"
     minute: "30"
     action: "pull"
