Revert "Disable integration data for Whitehall content"
This reverts commit 162e7141d188ae9b9016f7273bae7e81571266b7.

--- a/hieradata_aws/class/integration/search.yaml
+++ b/hieradata_aws/class/integration/search.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   "pull_es6_daily":
-    ensure: "absent"
+    ensure: "present"
     hour: "3"
     minute: "24"
     action: "pull"
