Configure a Procfile worker for short-url-manager
We're going to start using Sidekiq to send emails so we need to make
sure the Procfile worker runs.

https://github.com/alphagov/short-url-manager/pull/459 adds Sidekiq
configuration to the app itself.

--- a/hieradata/development.yaml
+++ b/hieradata/development.yaml
@@ -247,6 +247,7 @@ govuk::apps::search_api::rabbitmq::enable_publishing_listener: true
 
 govuk::apps::signon::enable_procfile_worker: false
 govuk::apps::smartanswers::expose_govspeak: true
+govuk::apps::short_url_manager::enable_procfile_worker: false
 govuk::apps::short_url_manager::mongodb_name: 'short_url_manager_development'
 govuk::apps::short_url_manager::mongodb_nodes: ['localhost']
 govuk::apps::sidekiq_monitoring::nginx_location: '/var/govuk/sidekiq-monitoring/public'
