Move 'Send Bulk Email' job into AWS
It looks like this was missed in the AWS migration and it currently
doens't work in Carrenza
(https://deploy.staging.publishing.service.gov.uk/job/send-bulk-email/2/console).

--- a/hieradata_aws/class/staging/jenkins.yaml
+++ b/hieradata_aws/class/staging/jenkins.yaml
@@ -65,6 +65,7 @@ govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::search_relevancy_rank_evaluation
   - govuk_jenkins::jobs::search_relevancy_metrics_etl
   - govuk_jenkins::jobs::search_generate_sitemaps
+  - govuk_jenkins::jobs::send_bulk_email
   - govuk_jenkins::jobs::smokey
   - govuk_jenkins::jobs::smokey_deploy
   - govuk_jenkins::jobs::whitehall_publisher_notifications
