Set Redis environment variables for search-admin

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -646,6 +646,8 @@ govuk::apps::search_admin::db_name: 'search_admin_production'
 govuk::apps::search_admin::db_hostname: 'mysql-primary'
 govuk::apps::search_admin::db_password: "%{hiera('govuk::apps::search_admin::db::mysql_search_admin')}"
 govuk::apps::search_admin::db_username: 'search_admin'
+govuk::apps::search_admin::redis_host: "%{hiera('sidekiq_host')}"
+govuk::apps::search_admin::redis_port: "%{hiera('sidekiq_port')}"
 
 govuk::apps::service_manual_publisher::http_username: "%{hiera('http_username')}"
 govuk::apps::service_manual_publisher::http_password: "%{hiera('http_password')}"
