Respond with 400 Bad Request when host is unknown.
The HTTP spec says the response for a bad hostname should be 400 Bad
Request: https://tools.ietf.org/html/rfc7230#section-5.4

--- a/modules/nginx/templates/app-default-vhost.conf
+++ b/modules/nginx/templates/app-default-vhost.conf
@@ -12,6 +12,6 @@ server {
   }
 
   location / {
-    return 500 '{"error": "Fell through to default vhost"}\n';
+    return <%= @status %> '{"error": "Fell through to default vhost"}\n';
   }
 }
