--- a/hieradata/node/mongo-2.backend.publishing.service.gov.uk.yaml
+++ b/hieradata/node/mongo-2.backend.publishing.service.gov.uk.yaml
@@ -3,7 +3,7 @@ mongodb::s3backup::cron::realtime_hour: '*'
 mongodb::s3backup::cron::realtime_minute: '*/30'
 govuk_env_sync::tasks:
   "push_maslow_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
     minute: "21"
     action: "push"
@@ -14,9 +14,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_publisher_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
-    minute: "21"
+    minute: "25"
     action: "push"
     dbms: "mongo"
     storagebackend: "s3"
@@ -25,9 +25,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_short_url_manager_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
-    minute: "21"
+    minute: "29"
     action: "push"
     dbms: "mongo"
     storagebackend: "s3"
@@ -36,9 +36,9 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_travel_advice_publisher_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "1"
-    minute: "21"
+    minute: "33"
     action: "push"
     dbms: "mongo"
     storagebackend: "s3"
@@ -47,7 +47,7 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_govuk_content_production":
-    ensure: "disabled"
+    ensure: "present"
     hour: "2"
     minute: "51"
     action: "push"
