Improve how the deploy nofile limit is increased for cache machines
This means that rather than having two configuration files with
different values for the same parameter, they'll just be one file with
the intended value.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -15,3 +15,7 @@ govuk::apps::router::mongodb_nodes:
   - 'router-backend-3'
 
 varnish::environment_ip_prefix: "%{hiera('environment_ip_prefix')}"
+
+# Increase the maximum number of file descriptors usable by the router
+# A file descriptor is used per connection
+govuk::deploy::config: 65536
