Add a new user account for Max
This'll eventually replace the maxlehmann account.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -201,6 +201,7 @@ users::usernames:
   - leenagupte
   - mahmudhussain
   - matthewgregory
+  - maxharden
   - maxlehmann
   - michaelswalker
   - murilodalri
