--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -482,6 +482,7 @@ users::usernames:
   - leenagupte
   - mahmudhussain
   - matthewgregory
+  - maxharden
   - maxlehmann
   - michaelswalker
   - murilodalri
