--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -179,6 +179,7 @@ users::usernames:
   - kevindew
   - leenagupte
   - mahmudhussain
+  - maxharden
   - maxlehmann
   - michaelswalker
   - murilodalri
