Add user Dana Cotoran

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -176,6 +176,7 @@ users::usernames:
   - chrisbanks
   - christopherashton
   - christopherbaines
+  - danacotoran
   - deanwilson
   - deborahchua
   - dilwoarhussain
