--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -457,6 +457,7 @@ users::usernames:
   - chrisbanks
   - christopherashton
   - christopherbaines
+  - danacotoran
   - deanwilson
   - deborahchua
   - dilwoarhussain
