--- a/hieradata/class/production/jenkins.yaml
+++ b/hieradata/class/production/jenkins.yaml
@@ -35,3 +35,4 @@ govuk_jenkins::job_builder::jobs:
 govuk_jenkins::jobs::deploy_cdn::enable_slack_notifications: true
 govuk_jenkins::jobs::deploy_puppet::enable_slack_notifications: true
 govuk_jenkins::jobs::validate_published_dns::run_daily: true
+govuk_jenkins::jobs::user_monitor::enable_icinga_check: true
