Add Richard Towers' SSH key to integration
We'll think about production later, once we've tested this works.

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -206,6 +206,7 @@ users::usernames:
   - oscarwyatt
   - peterhartshorn
   - rebeccapearce
+  - richardtowers
   - rochtrinque
   - rosafox
   - sarahyoung
