--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -492,6 +492,7 @@ users::usernames:
   - oscarwyatt
   - peterhartshorn
   - rebeccapearce
+  - richardtowers
   - rochtrinque
   - rosafox
   - sarahyoung
