--- a/hieradata/production.yaml
+++ b/hieradata/production.yaml
@@ -374,3 +374,4 @@ postfix::rewrite_mail_list: 'machine.email.carrenza'
 
 mongodb::s3backup::backup::s3_bucket: 'govuk-mongodb-backup-s3-production'
 mongodb::s3backup::backup::s3_bucket_daily: 'govuk-mongodb-backup-s3-daily-production'
+mongodb::server::version: '2.6.12'
