give ssh access to frederic francois on gov.uk integration

--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -184,6 +184,7 @@ users::usernames:
   - ericyoung
   - erinrajstaniland
   - felisialoukou
+  - fredericfrancois
   - grahamlewis
   - huwdiprose
   - ianjames
