--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -470,6 +470,7 @@ users::usernames:
   - ericyoung
   - erinrajstaniland
   - felisialoukou
+  - fredericfrancois
   - grahamlewis
   - huwdiprose
   - ianjames
