--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -943,7 +943,9 @@ govuk_jenkins::jobs::smokey::signon_password: "%{hiera('smokey_signon_password')
 govuk_jenkins::jobs::run_rake_task::applications: *deployable_applications
 govuk_jenkins::jobs::deploy_app::applications: *deployable_applications
 
-govuk_jenkins::jobs::integration_deploy::applications: *deployable_applications
+govuk_jenkins::jobs::deploy_app_downstream::applications:
+  smartanswers:
+    repository: 'smart-answers'
 
 govuk_jenkins::jobs::deploy_lambda_app::lambda_apps:
   - 'email_alert_notifications'
