--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -268,6 +268,8 @@ govuk_jenkins::jobs::data_sync_complete_staging::signon_domains_to_migrate:
     old: -production.cloudapps.digital
     new: -staging.cloudapps.digital
 
+govuk_jenkins::jobs::deploy_app_downstream::deploy_url: 'deploy.blue.production.govuk.digital'
+
 govuk_jenkins::jobs::deploy_dns::gce_client_name: 'govuk-dns-deploy'
 govuk_jenkins::jobs::deploy_dns::gce_project_id: 'govuk-staging-160211'
 
