--- a/hieradata/class/ci_master.yaml
+++ b/hieradata/class/ci_master.yaml
@@ -70,6 +70,7 @@ govuk_jenkins::config::create_agent_role: true
 govuk_jenkins::config::executors: '0'
 
 govuk_jenkins::job_builder::jobs:
+  - govuk_jenkins::jobs::deploy_app_downstream
   - govuk_jenkins::jobs::integration_deploy
   - govuk_jenkins::jobs::build_fpm_package
 
