--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -615,7 +615,7 @@ govuk_jenkins::jobs::smokey::signon_password: "%{hiera('smokey_signon_password')
 govuk_jenkins::jobs::run_rake_task::applications: *deployable_applications
 govuk_jenkins::jobs::deploy_app::applications: *deployable_applications
 
-govuk_jenkins::jobs::integration_deploy::applications:
+govuk_jenkins::jobs::deploy_app_downstream::applications:
   <<: *deployable_applications
   # Include applications that have been migrated to AWS
   authenticating-proxy: {}
