--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -89,6 +89,9 @@ govuk_jenkins::jobs::data_sync_complete_staging::signon_domains_to_migrate:
     old: -production.london.cloudapps.digital
     new: -staging.london.cloudapps.digital
 
+# This is required for consistency with AWS, but is never used
+govuk_jenkins::jobs::deploy_app_downstream::deploy_url: ''
+
 govuk_jenkins::jobs::deploy_dns::gce_client_name: 'govuk-dns-deploy'
 govuk_jenkins::jobs::deploy_dns::gce_project_id: 'govuk-staging-160211'
 
