--- a/spec/fixtures/hieradata/common.yaml
+++ b/spec/fixtures/hieradata/common.yaml
@@ -68,8 +68,7 @@ govuk_jenkins::github_client_secret_encrypted: baz
 govuk_jenkins::config::github_web_uri: wibble
 
 govuk_jenkins::jobs::deploy_app::applications: *deployable_applications
-govuk_jenkins::jobs::deploy_app::applications: *deployable_applications
-govuk_jenkins::jobs::integration_deploy::applications: *deployable_applications
+govuk_jenkins::jobs::deploy_app_downstream::applications: *deployable_applications
 govuk_jenkins::jobs::run_rake_task::applications: *deployable_applications
 
 govuk_jenkins::packages::gcloud::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
