adjust govuk_env_sync integration
Actions:
1. push local links manager backup from staging to S3
2. pull local links manager backup from staging S3 to integration

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -44,10 +44,21 @@ govuk_env_sync::tasks:
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
     transformation_sql_filename: "anonymise_email_addresses.sql"
+  "pull_local-links-manager_staging_daily":
+    ensure: "present"
+    hour: "5"
+    minute: "00"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "local-links-manager_production"
+    temppath: "/tmp/local-links-manager_integration"
+    url: "govuk-staging-database-backups"
+    path: "postgresql-backend"
   "push_local-links-manager_integration_daily":
     ensure: "present"
-    hour: "3"
-    minute: "0"
+    hour: "6"
+    minute: "00"
     action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
