fix push local-links-manager

--- a/hieradata_aws/class/staging/db_admin.yaml
+++ b/hieradata_aws/class/staging/db_admin.yaml
@@ -47,7 +47,7 @@ govuk_env_sync::tasks:
     ensure: "present"
     hour: "4"
     minute: "30"
-    action: "pull"
+    action: "push"
     dbms: "postgresql"
     storagebackend: "s3"
     database: "local-links-manager_production"
