add publishers data sync config in aws production but disabled
In preparation for the AWS migration of publishers, we add the configs to sync the databases for these apps. We keep them disabled as there is no need to run them yet in production on a schedule.

The following apps are taken care of:
- Collections Publisher
- Contacts
- Search Admin
- Service Manual Publisher
- Content Tagger
- Content Publisher
- Publisher
- Manuals Publisher (mongodb: govuk_content_production)
- Short Url Manager
- Specialist Publisher (mongodb: govuk_content_production)
- HMRC manuals api (doesn't seem to have a database env -> no db)
- Maslow
- Travel Advice Publisher

--- a/hieradata_aws/class/production/db_admin.yaml
+++ b/hieradata_aws/class/production/db_admin.yaml
@@ -10,6 +10,50 @@ govuk_env_sync::tasks:
     temppath: "/tmp/ckan_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_collections_publisher_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "00"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "pull_collections_publisher_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "00"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "collections_publisher_production"
+    temppath: "/tmp/collections_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "push_contacts_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "15"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "pull_contacts_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "15"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "contacts_production"
+    temppath: "/tmp/contacts_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
   "push_content_data_admin_production_daily":
     ensure: "present"
     hour: "1"
@@ -19,6 +63,50 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "content_data_admin_production"
     temppath: "/tmp/content_data_admin_production_push"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_content_publisher_production_daily":
+    ensure: "disabled"
+    hour: "2"
+    minute: "00"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_content_publisher_production_daily":
+    ensure: "disabled"
+    hour: "2"
+    minute: "00"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_publisher_production"
+    temppath: "/tmp/content_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_content_tagger_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "30"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_content_tagger_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "30"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "content_tagger_production"
+    temppath: "/tmp/content_tagger_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
   "push_email_alert_api_production_daily":
@@ -41,6 +129,28 @@ govuk_env_sync::tasks:
     storagebackend: "s3"
     database: "govuk_assets_production"
     temppath: "/tmp/govuk_assets_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "push_govuk_content_production":
+    ensure: "disabled"
+    hour: "2"
+    minute: "20"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_content_production"
+    temppath: "/tmp/govuk_content_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_govuk_content_production":
+    ensure: "disabled"
+    hour: "2"
+    minute: "20"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "govuk_content_production"
+    temppath: "/tmp/govuk_content_production"
     url: "govuk-production-database-backups"
     path: "mongo-normal"
   "push_local-links-manager_production_daily":
@@ -87,6 +197,94 @@ govuk_env_sync::tasks:
     temppath: "/tmp/link_checker_api_production"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_maslow_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "05"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "maslow_production"
+    temppath: "/tmp/maslow_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_maslow_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "05"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "maslow_production"
+    temppath: "/tmp/maslow_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "push_search_admin_production_daily":
+    ensure: "disabled"
+    hour: "0"
+    minute: "20"
+    action: "push"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "pull_search_admin_production_daily":
+    ensure: "disabled"
+    hour: "0"
+    minute: "20"
+    action: "pull"
+    dbms: "mysql"
+    storagebackend: "s3"
+    database: "search_admin_production"
+    temppath: "/tmp/search_admin_production"
+    url: "govuk-production-database-backups"
+    path: "mysql"
+  "push_service_manual_publisher_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "5"
+    action: "push"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "pull_service_manual_publisher_production_daily":
+    ensure: "disabled"
+    hour: "1"
+    minute: "5"
+    action: "pull"
+    dbms: "postgresql"
+    storagebackend: "s3"
+    database: "service-manual-publisher_production"
+    temppath: "/tmp/service-manual-publisher_production"
+    url: "govuk-production-database-backups"
+    path: "postgresql-backend"
+  "push_short_url_manager_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "25"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "short_url_manager_production"
+    temppath: "/tmp/short_url_manager_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_short_url_manager_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "25"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "short_url_manager_production"
+    temppath: "/tmp/short_url_manager_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
   "push_support-contacts_production_daily":
     ensure: "present"
     hour: "2"
@@ -98,6 +296,28 @@ govuk_env_sync::tasks:
     temppath: "/tmp/"
     url: "govuk-production-database-backups"
     path: "postgresql-backend"
+  "push_travel_advice_publisher_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "35"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "travel_advice_publisher_production"
+    temppath: "/tmp/travel_advice_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_travel_advice_publisher_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "35"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "travel_advice_publisher_production"
+    temppath: "/tmp/travel_advice_publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
   "push_licensify_production": &push_licensify
     hour: "1"
     minute: "30"
@@ -182,6 +402,28 @@ govuk_env_sync::tasks:
     temppath: "/tmp/whitehall_production"
     url: "govuk-production-database-backups"
     path: "mysql"
+  "push_publisher_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "10"
+    action: "push"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "publisher_production"
+    temppath: "/tmp/publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
+  "pull_publisher_production":
+    ensure: "disabled"
+    hour: "1"
+    minute: "10"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "publisher_production"
+    temppath: "/tmp/publisher_production"
+    url: "govuk-production-database-backups"
+    path: "mongo-normal"
   "pull_publishing_api_production":
     ensure: "disabled"
     hour: "0"
