Make port numbers explicit in hieradata
This acts as a form of documentation displaying together all the port
numbers in use by our applications, making it easy to pick free port
numbers. This will replace `development-vm/Procfile` as the
canonical source for this information when we delete the development VM.

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -210,6 +210,61 @@ filebeat::prospectors:
 gdal::repo::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 gdal::repo::apt_mirror_gpg_key_fingerprint: "%{hiera('apt_mirror_fingerprint')}"
 
+govuk::apps::publisher::port: 3000
+govuk::apps::imminence::port: 3002
+govuk::apps::frontend::port: 3005
+govuk::apps::smartanswers::port: 3010
+govuk::apps::static::port: 3013
+govuk::apps::licencefinder::port: 3014
+govuk::apps::signon::port: 3016
+govuk::apps::whitehall::port: 3020
+govuk::apps::feedback::port: 3028
+govuk::apps::support::port: 3031
+govuk::apps::travel_advice_publisher::port: 3035
+govuk::apps::release::port: 3036
+govuk::apps::asset_manager::port: 3037
+govuk::apps::transition::port: 3044
+govuk::apps::calculators::port: 3047
+govuk::apps::bouncer::port: 3049
+govuk::apps::contacts::port: 3051
+govuk::apps::maslow::port: 3053
+govuk::apps::router::port: 3054
+govuk::apps::router_api::port: 3056
+govuk::apps::finder_frontend::port: 3062
+govuk::apps::specialist_publisher::port: 3064
+govuk::apps::content_store::port: 3068
+govuk::apps::collections::port: 3070
+govuk::apps::hmrc_manuals_api::port: 3071
+govuk::apps::manuals_frontend::port: 3072
+govuk::apps::search_admin::port: 3073
+govuk::apps::govuk_crawler_worker::port: 3074
+govuk::apps::support_api::port: 3075
+govuk::apps::short_url_manager::port: 3076
+govuk::apps::collections_publisher::port: 3078
+govuk::apps::info_frontend::port: 3085
+govuk::apps::email_alert_api::port: 3088
+govuk::apps::government_frontend::port: 3090
+govuk::apps::publishing_api::port: 3093
+govuk::apps::email_alert_frontend::port: 3099
+govuk::apps::backdrop_read::port: 3101
+govuk::apps::backdrop_write::port: 3102
+govuk::apps::authenticating_proxy::port: 3107
+govuk::apps::mapit::port: 3108
+govuk::apps::service_manual_publisher::port: 3111
+govuk::apps::content_tagger::port: 3116
+govuk::apps::local_links_manager::port: 3121
+govuk::apps::service_manual_frontend::port: 3122
+govuk::apps::manuals_publisher::port: 3205
+govuk::apps::link_checker_api::port: 3208
+govuk::apps::sidekiq_monitoring::port: 3211
+govuk::apps::publishing_components::port: 3212
+govuk::apps::ckan::port: 3220
+govuk::apps::ckan::pycsw_port: 3221
+govuk::apps::content_publisher::port: 3221
+govuk::apps::content_data_admin::port: 3230
+govuk::apps::search_api::port: 3233
+govuk::apps::content_data_api::port: 3235
+
 govuk::apps::asset_manager::jwt_auth_secret: "%{hiera('jwt_auth_secret')}"
 govuk::apps::asset_manager::mongodb_nodes:
   - 'mongo-1.backend'
