Extract job to deploy Puppet to Integration
Previously we app-specific part of the 'integration_deploy' set of
jobs into a new, reusable 'Deploy_App_Downstream' job. This does a
similar thing for Puppet to avoid confusion with 'downstream deploy'
and 'integration deploy'.

--- a/hieradata/class/ci_master.yaml
+++ b/hieradata/class/ci_master.yaml
@@ -58,7 +58,7 @@ govuk_jenkins::config::views:
     - 'govuk-puppet'
     - 'router'
     - 'router-api'
-    - 'integration-puppet-deploy'
+    - 'Deploy_Puppet_Downstream'
   Finding_Things:
     - 'collections-publisher'
     - 'govuk-content-schemas'
@@ -71,6 +71,7 @@ govuk_jenkins::config::executors: '0'
 
 govuk_jenkins::job_builder::jobs:
   - govuk_jenkins::jobs::deploy_app_downstream
+  - govuk_jenkins::jobs::deploy_puppet_downstream
   - govuk_jenkins::jobs::integration_deploy
   - govuk_jenkins::jobs::build_fpm_package
 
